Fix page width on mobiles

--- a/themes/orbitor-hugo/assets/scss/_common.scss
+++ b/themes/orbitor-hugo/assets/scss/_common.scss
@@ -218,9 +218,13 @@ input[type="tel"] {
     padding-left: 0;
     padding-right: 0;
 
-    .col, .col-12, .col-4, .col-6, .col-lg, .col-lg-10, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-md-12, .col-md-3, .col-md-4, .col-md-6, .col-md-8, .col-sm-12, .col-sm-6, .col-xl-8 {
-      padding-right: 0;
-      padding-left: 0;
+    .row {
+      margin-right: 0;
+      margin-left: 0;
+      .col, .col-12, .col-4, .col-6, .col-lg, .col-lg-10, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-md-12, .col-md-3, .col-md-4, .col-md-6, .col-md-8, .col-sm-12, .col-sm-6, .col-xl-8 {
+        padding-right: 0;
+        padding-left: 0;
+      }
     }
   }
 
